--- a/auth/render.yaml
+++ b/auth/render.yaml
@@ -4,7 +4,7 @@ services:
     name: authapp # replace with your app name
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn auth.authapp.wsgi:application
+    startCommand: gunicorn auth.wsgi:application
     envVars:
       - key: DATABASE_URL
         fromDatabase:
